--- a/tika-addons-parent/pom.xml
+++ b/tika-addons-parent/pom.xml
@@ -21,7 +21,20 @@
     <slf4j.version>1.7.12</slf4j.version>
   </properties>
   <dependencies>
+    <dependency>
+      <groupId>org.apache.tika</groupId>
+      <artifactId>tika-core</artifactId>
+      <version>${tika.version}</version>
+      <type>test-jar</type>
+      <scope>test</scope>
+    </dependency>
 
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.11</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
