--- a/tika-addons-parent/pom.xml
+++ b/tika-addons-parent/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>org.tallison</groupId>
   <artifactId>tika-addons-parent</artifactId>
-  <version>1.6</version>
+  <version>1.17</version>
   <packaging>pom</packaging>
 
   <properties>
@@ -16,10 +16,10 @@
     <log4j.version>2.4.1</log4j.version>
     <pdfbox18.version>1.8.11</pdfbox18.version>
     <jempbox.version>1.8.11</jempbox.version>
-    <tika.version>1.6</tika.version>
+    <tika.version>1.17</tika.version>
     <commons.io.version>2.4</commons.io.version>
     <slf4j.version>1.7.12</slf4j.version>
-    <cli.version>1.3.1</cli.version>
+    <cli.version>1.4</cli.version>
 
   </properties>
   <dependencies>
@@ -55,13 +55,21 @@
       <artifactId>tika-core</artifactId>
       <version>${tika.version}</version>
     </dependency>
-
+    <dependency>
+      <groupId>org.apache.tika</groupId>
+      <artifactId>tika-serialization</artifactId>
+      <version>${tika.version}</version>
+    </dependency>
     <dependency>
       <groupId>org.apache.tika</groupId>
       <artifactId>tika-parsers</artifactId>
       <version>${tika.version}</version>
     </dependency>
-
+    <dependency>
+      <groupId>org.apache.tika</groupId>
+      <artifactId>tika-batch</artifactId>
+      <version>${tika.version}</version>
+    </dependency>
     <dependency>
       <groupId>org.apache.tika</groupId>
       <artifactId>tika-core</artifactId>
