--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
   <parent>
     <groupId>org.tallison</groupId>
     <artifactId>tika-addons-parent</artifactId>
-    <version>1.13-SNAPSHOT</version>
+    <version>1.19-SNAPSHOT</version>
     <relativePath>tika-addons-parent/pom.xml</relativePath>
   </parent>
 
@@ -37,7 +37,8 @@
     <module>tika-addons-parent</module>
     <module>pdfbox18-shaded</module>
     <module>pdfbox18-shaded-integration-tests</module>
-    <!--    <module>pdfbox18-shaded-integration-test</module>-->
+      <module>recursive-fork-parser</module>
+      <!--    <module>pdfbox18-shaded-integration-test</module>-->
   </modules>
 
 </project>
