--- a/recursive-fork-parser/pom.xml
+++ b/recursive-fork-parser/pom.xml
@@ -4,14 +4,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <parent>
-        <groupId>org.tallison</groupId>
+        <groupId>org.tallison.tika</groupId>
         <artifactId>tika-addons-parent</artifactId>
-        <version>1.19-SNAPSHOT</version>
+        <version>1.18-0.1</version>
         <relativePath>../tika-addons-parent/pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>tika-recursive-fork-parser</artifactId>
+    <artifactId>recursive-fork-parser</artifactId>
 
     <dependencies>
         <dependency>
