--- a/recursive-fork-parser/pom.xml
+++ b/recursive-fork-parser/pom.xml
@@ -6,13 +6,13 @@
     <parent>
         <groupId>org.tallison.tika</groupId>
         <artifactId>tika-addons-parent</artifactId>
-        <version>1.18-0.1</version>
+        <version>1.18-0.2</version>
         <relativePath>../tika-addons-parent/pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>recursive-fork-parser</artifactId>
-
+    <packaging>jar</packaging>
     <dependencies>
         <dependency>
             <groupId>org.apache.tika</groupId>
