--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
     <module>pdfbox18-shaded-integration-tests</module>
       <module>recursive-fork-parser</module>
       <module>eval-addons</module>
+      <module>embedded-extractor</module>
       <!--    <module>pdfbox18-shaded-integration-test</module>-->
   </modules>
 
