--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
       <module>recursive-fork-parser</module>
       <module>eval-addons</module>
       <module>embedded-extractor</module>
+      <module>zip-dumper</module>
       <!--    <module>pdfbox18-shaded-integration-test</module>-->
   </modules>
 
