move length permutations to langdetectrunner to save space compress sample files w gz.

--- a/lang-id/lang-id-core/pom.xml
+++ b/lang-id/lang-id-core/pom.xml
@@ -11,5 +11,13 @@
 
     <artifactId>lang-id-core</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-compress</artifactId>
+            <version>1.18</version>
+        </dependency>
+
+    </dependencies>
 
 </project>
