update lang detection with tika-eval lang detector

--- a/lang-id/pom.xml
+++ b/lang-id/pom.xml
@@ -15,6 +15,7 @@
         <module>lang-id-opennlp</module>
         <module>lang-id-yalder</module>
         <module>lang-id-optimaize</module>
+        <module>lang-id-tika-eval</module>
         <module>lang-id-core</module>
         <module>lang-id-eval</module>
     </modules>
