--- a/lang-id/lang-id-eval/pom.xml
+++ b/lang-id/lang-id-eval/pom.xml
@@ -33,6 +33,11 @@
             <version>1.19-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>org.tallison</groupId>
+            <artifactId>lang-id-tika-eval</artifactId>
+            <version>1.19-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>3.9</version>
