initial tika-eval commit

--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
       <module>embedded-extractor</module>
       <module>zip-dumper</module>
       <module>lang-id</module>
+      <module>tika-eval-solrj</module>
       <!--    <module>pdfbox18-shaded-integration-test</module>-->
   </modules>
 
