--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
       <module>zip-dumper</module>
       <module>lang-id</module>
       <module>tika-eval-solrj</module>
-    <module>tika-eval-at-scale-core</module>
+    <module>solr-integration-tests</module>
     <!--    <module>pdfbox18-shaded-integration-test</module>-->
   </modules>
 
