--- a/solr-tika-integration/pom.xml
+++ b/solr-tika-integration/pom.xml
@@ -9,10 +9,10 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>solr-integration-tests</artifactId>
+    <artifactId>solr-tika-integration</artifactId>
     <properties>
-        <tika.version>1.23</tika.version>
         <solr.version>8.3.1</solr.version>
+        <tika.version>1.23</tika.version>
     </properties>
     <dependencies>
         <dependency>
@@ -61,5 +61,4 @@
             <version>${solr.version}</version>
         </dependency>
     </dependencies>
-
 </project>
