--- a/bugtracker-crawler/pom.xml
+++ b/bugtracker-crawler/pom.xml
@@ -52,5 +52,10 @@
             <artifactId>tika-parsers</artifactId>
             <version>1.22</version>
         </dependency>
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.4</version>
+        </dependency>
     </dependencies>
 </project>
