--- a/bugtracker-crawler/pom.xml
+++ b/bugtracker-crawler/pom.xml
@@ -74,6 +74,14 @@
                                 false
                             </createDependencyReducedPom>
                             <filters>
+                                <filter>
+                                <artifact>*:*</artifact>
+                                <excludes>
+                                    <exclude>META-INF/*.SF</exclude>
+                                    <exclude>META-INF/*.DSA</exclude>
+                                    <exclude>META-INF/*.RSA</exclude>
+                                </excludes>
+                                </filter>
                             </filters>
                             <transformers>
                             </transformers>
