--- a/bugtracker-crawler/pom.xml
+++ b/bugtracker-crawler/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>jira-crawler</artifactId>
+    <artifactId>bugtracker-crawler</artifactId>
 <properties>
     <httpclient.version>4.5.11</httpclient.version>
     <httpcore.version>4.4.13</httpcore.version>
