add tika cli client example

--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,8 @@
       <module>bugtracker-crawler</module>
     <module>solr-tika-integration</module>
       <module>cheap-fuzzing</module>
-      <!--    <module>pdfbox18-shaded-integration-test</module>-->
+    <module>tika-cli-client</module>
+    <!--    <module>pdfbox18-shaded-integration-test</module>-->
   </modules>
 
 </project>
