--- a/eval-addons/pom.xml
+++ b/eval-addons/pom.xml
@@ -42,7 +42,11 @@
             <artifactId>postgresql</artifactId>
             <version>42.2.5</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.31.1</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
