--- a/eval-addons/pom.xml
+++ b/eval-addons/pom.xml
@@ -47,6 +47,16 @@
             <artifactId>sqlite-jdbc</artifactId>
             <version>3.31.1</version>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.tika</groupId>
+            <artifactId>tika-eval</artifactId>
+            <version>1.24.1</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
