--- a/file-id/droid-wrapper/pom.xml
+++ b/file-id/droid-wrapper/pom.xml
@@ -3,25 +3,20 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>lang-id</artifactId>
+        <artifactId>tika-addons</artifactId>
         <groupId>org.tallison</groupId>
         <version>1.19-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>lang-id-yalder</artifactId>
+    <artifactId>droid-wrapper</artifactId>
+
 
     <dependencies>
-
         <dependency>
-            <groupId>org.krugler</groupId>
-            <artifactId>yalder-core</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.tallison</groupId>
-            <artifactId>lang-id-core</artifactId>
-            <version>1.19-SNAPSHOT</version>
+            <groupId>uk.gov.nationalarchives</groupId>
+            <artifactId>droid-command-line</artifactId>
+            <version>6.5</version>
         </dependency>
     </dependencies>
 </project>
