--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
     <module>droid-wrapper</module>
     <!--    <module>pdfbox18-shaded-integration-test</module>-->
       <module>pdftotext</module>
+      <module>batchlite</module>
       <!--    <module>pdfbox18-shaded-integration-test</module>-->
   </modules>
 
