refactor, fix writer race condition

--- a/lang-id/lang-id-eval/pom.xml
+++ b/lang-id/lang-id-eval/pom.xml
@@ -22,11 +22,12 @@
             <artifactId>lang-id-opennlp</artifactId>
             <version>1.19-SNAPSHOT</version>
         </dependency>
+        <!--
         <dependency>
             <groupId>org.tallison</groupId>
             <artifactId>lang-id-yalder</artifactId>
             <version>1.19-SNAPSHOT</version>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>org.tallison</groupId>
             <artifactId>lang-id-optimaize</artifactId>
