--- a/batchlite/pom.xml
+++ b/batchlite/pom.xml
@@ -2,16 +2,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <!--<parent>
-        <artifactId>tika-addons</artifactId>
+   <!-- <parent>
+        <artifactId>tika-addons-parent</artifactId>
         <groupId>org.tallison</groupId>
         <version>1.19-SNAPSHOT</version>
-    </parent> -->
-
+        <relativePath>../tika-addons-parent/pom.xml</relativePath>
+    </parent>
+-->
     <modelVersion>4.0.0</modelVersion>
     <artifactId>batchlite</artifactId>
     <groupId>org.tallison</groupId>
-    <version>0.2.0</version>
+    <version>0.3.0-SNAPSHOT</version>
     <name>batchlite</name>
     <description>utilities for running processes multithreaded against files on a file share</description>
     <url>https://github.com/tballison/tika-addons/tree/main/batchlite</url>
@@ -51,7 +52,13 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-csv</artifactId>
             <version>1.8</version>
+        </dependency><!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.18</version>
         </dependency>
+
         <!--
         <dependency>
             <groupId>com.h2database</groupId>
