--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,9 @@
     <!--    <module>pdfbox18-shaded-integration-test</module>-->
       <module>pdftotext</module>
       <module>batchlite</module>
-      <!--    <module>pdfbox18-shaded-integration-test</module>-->
+      <module>xmp-scraper</module>
+    <module>tika-app-custom-docker</module>
+    <!--    <module>pdfbox18-shaded-integration-test</module>-->
   </modules>
 
 </project>
