--- a/file-id/pom.xml
+++ b/file-id/pom.xml
@@ -7,6 +7,7 @@
         <groupId>org.tallison</groupId>
         <version>1.19-SNAPSHOT</version>
     </parent>
+    <packaging>pom</packaging>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>file-id</artifactId>
