--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
     <module>solr-tika-integration</module>
     <module>tika-cli-client</module>
       <module>file-id</module>
-    <module>droid-wrapper</module>
+<!--    <module>droid-wrapper</module> -->
     <!--    <module>pdfbox18-shaded-integration-test</module>-->
       <module>pdftotext</module>
       <module>batchlite</module>
