--- a/tika-tomcat/docker/Dockerfile
+++ b/tika-tomcat/docker/Dockerfile
@@ -1,3 +1,4 @@
-FROM tomcat:8-jdk11-openjdk-slim
+#FROM tomcat:8-jdk11-openjdk-slim
+FROM tomcat:9.0.56-jdk11-openjdk
 COPY SampleServlet.war /usr/local/tomcat/webapps
 CMD ["catalina.sh", "run"]
