--- a/tika-integration-examples/pom.xml
+++ b/tika-integration-examples/pom.xml
@@ -73,7 +73,13 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-resources-plugin</artifactId>
-        <version>3.2.0</version>
+        <version>3.0.2</version>
+        <!--        <configuration>
+                <nonFilteredFileExtensions>
+                  <nonFilteredFileExtension>docx</nonFilteredFileExtension>
+                  <nonFilteredFileExtension>pdf</nonFilteredFileExtension>
+                </nonFilteredFileExtensions>
+                </configuration>-->
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
