--- a/tika-app-custom-docker/pom.xml
+++ b/tika-app-custom-docker/pom.xml
@@ -14,18 +14,18 @@
   <properties>
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
-    <tika.version>2.2.2-SNAPSHOT</tika.version>
+    <tika.version>2.3.0</tika.version>
   </properties>
   <dependencies>
     <dependency>
       <groupId>org.apache.tika</groupId>
       <artifactId>tika-core</artifactId>
-      <version>2.2.2-SNAPSHOT</version>
+      <version>${tika.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.tika</groupId>
       <artifactId>tika-parsers-standard-package</artifactId>
-      <version>2.2.2-SNAPSHOT</version>
+      <version>${tika.version}</version>
       <exclusions>
         <exclusion>
           <groupId>xml-apis</groupId>
@@ -36,12 +36,12 @@
     <dependency>
       <groupId>org.apache.tika</groupId>
       <artifactId>tika-parser-microsoft-module</artifactId>
-      <version>2.2.2-SNAPSHOT</version>
+      <version>${tika.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.tika</groupId>
       <artifactId>tika-parser-pdf-module</artifactId>
-      <version>2.2.2-SNAPSHOT</version>
+      <version>${tika.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.pdfbox</groupId>
