--- a/tika-integration-examples/pom.xml
+++ b/tika-integration-examples/pom.xml
@@ -14,18 +14,19 @@
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
+    <tika.version>2.3.0</tika.version>
   </properties>
 
   <dependencies>
     <dependency>
       <groupId>org.apache.tika</groupId>
       <artifactId>tika-core</artifactId>
-      <version>2.3.0</version>
+      <version>${tika.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.tika</groupId>
       <artifactId>tika-parsers-standard-package</artifactId>
-      <version>2.3.0</version>
+      <version>${tika.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
