--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,7 @@
     <module>tika-app-custom-docker</module>
     <module>tika-tomcat</module>
     <module>tika-package-examples</module>
+    <module>tika-rendering-dev</module>
     <!--    <module>pdfbox18-shaded-integration-test</module>-->
   </modules>
 
