--- a/tika-rendering-dev/pom.xml
+++ b/tika-rendering-dev/pom.xml
@@ -24,11 +24,12 @@
       <artifactId>tika-core</artifactId>
       <version>${tika.version}</version>
     </dependency>
+    <!--
     <dependency>
       <groupId>org.apache.tika</groupId>
       <artifactId>tika-parser-ocr-module</artifactId>
       <version>${tika.version}</version>
-    </dependency>
+    </dependency> -->
     <dependency>
       <groupId>org.apache.tika</groupId>
       <artifactId>tika-parser-image-module</artifactId>
